--- a/base/public/assets/css/main.css
+++ b/base/public/assets/css/main.css
@@ -147,7 +147,7 @@ table {
   font-family: "Inter", sans-serif;
   color: rgba(0, 0, 0, 0.4);
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .public_footer {
     justify-content: space-around;
     padding: 100px 60px;
@@ -181,7 +181,7 @@ table {
   padding: 40px 0px;
   gap: 60px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .public_footer_section {
     flex-direction: row;
   }
@@ -288,7 +288,7 @@ body .public__header {
 }
 @media screen and (min-width: 1224px) {
   body .public__header {
-    width: 100vw;
+    width: 100%;
     margin-bottom: 57px;
   }
 }
@@ -302,7 +302,7 @@ body .public__header nav {
   font-family: "Roboto", serif;
   position: relative;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header nav {
     margin-bottom: 20px;
   }
@@ -324,6 +324,11 @@ body .public__header nav .nav__icone {
   z-index: 1;
   border: none;
   background: none;
+}
+@media screen and (min-width: 376px) and (max-width: 1223px) {
+  body .public__header nav .nav__icone {
+    display: none;
+  }
 }
 @media screen and (min-width: 1224px) {
   body .public__header nav .nav__icone {
@@ -347,6 +352,11 @@ body .public__header nav .nav__burger {
   width: 200px;
   border-radius: 10px;
   box-shadow: 0px 0px 60px -29px rgba(0, 0, 0, 0.2509803922);
+}
+@media screen and (min-width: 376px) and (max-width: 1223px) {
+  body .public__header nav .nav__burger {
+    display: none;
+  }
 }
 @media screen and (min-width: 1224px) {
   body .public__header nav .nav__burger {
@@ -377,6 +387,11 @@ body .public__header nav .nav__bar {
   display: none;
   margin-top: 35px;
 }
+@media screen and (min-width: 376px) and (max-width: 1223px) {
+  body .public__header nav .nav__bar {
+    display: flex;
+  }
+}
 @media screen and (min-width: 1224px) {
   body .public__header nav .nav__bar {
     display: flex;
@@ -388,7 +403,7 @@ body .public__header nav .nav__bar {
 body .public__header nav .nav__bar li {
   margin-right: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header nav .nav__bar li {
     margin-right: 20px;
   }
@@ -472,7 +487,7 @@ body .public__header nav h1 {
   font-size: 48px;
   font-weight: 900;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header nav h1 {
     margin-bottom: 20px;
   }
@@ -501,7 +516,7 @@ body .public__header .container__info h2 {
   font-weight: 900;
   text-align: center;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header .container__info h2 {
     width: auto;
     font-size: 50px;
@@ -520,7 +535,7 @@ body .public__header .container__info .container__info__img {
   height: 290px;
   width: 100vw;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header .container__info .container__info__img {
     height: 500px;
     width: 550px;
@@ -537,7 +552,7 @@ body .public__header img {
   height: 33px;
   margin-top: auto;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body .public__header img {
     height: 66px;
     width: 751px;
@@ -585,7 +600,7 @@ body main .container__info__slogan h2 {
   text-align: left;
   font-family: "Inter", sans-serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body main .container__info__slogan h2 {
     width: auto;
     font-size: 50px;
@@ -605,7 +620,7 @@ body main .container__info__slogan__phone__square {
   width: 350px;
   margin-top: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body main .container__info__slogan__phone__square {
     height: 345px;
     width: 648px;
@@ -708,7 +723,7 @@ body main .container__people h5 {
   margin-left: 30px;
   margin-bottom: 15px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body main .container__people h5 {
     align-self: normal;
     text-align: center;
@@ -1036,7 +1051,7 @@ body main .container__info__slogan h2 {
   text-align: left;
   font-family: "Inter", sans-serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body main .container__info__slogan h2 {
     width: auto;
     font-size: 50px;
@@ -1056,7 +1071,7 @@ body main .container__info__slogan__phone__square {
   width: 350px;
   margin-top: 10px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   body main .container__info__slogan__phone__square {
     height: 345px;
     width: 648px;
@@ -1230,7 +1245,7 @@ body main #myTable_paginate a:hover {
   padding: 18px 12px;
   color: rgba(138, 140, 145, 0.6274509804);
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .login__section__card__form {
     align-items: flex-start;
     margin: 20px auto;
@@ -1253,7 +1268,7 @@ body main #myTable_paginate a:hover {
   padding: 10px 0px;
   outline: 5px solid rgba(125, 151, 244, 0.4784313725);
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .login__section__card__form h2 {
     width: auto;
     margin: 20px auto;
@@ -1312,7 +1327,7 @@ body main #myTable_paginate a:hover {
   border-radius: 5px;
   margin: 0px auto 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .login__section__card__form div input[type=submit] {
     margin: 5px auto 0px;
   }
@@ -1379,7 +1394,7 @@ body main #myTable_paginate a:hover {
   color: rgba(138, 140, 145, 0.6274509804);
   font-family: "Roboto", serif;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .signup__section__card__form {
     align-items: flex-start;
     margin: 20px auto;
@@ -1401,7 +1416,7 @@ body main #myTable_paginate a:hover {
   padding: 10px 0px;
   outline: 5px solid rgba(125, 151, 244, 0.4784313725);
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .signup__section__card__form h2 {
     width: auto;
     margin: 20px auto;
@@ -1454,7 +1469,7 @@ body main #myTable_paginate a:hover {
   border-radius: 5px;
   margin: 20px auto 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .signup__section__card__form input[type=submit] {
     margin: 25px auto 0px;
   }
@@ -1492,7 +1507,7 @@ body main #myTable_paginate a:hover {
   background-position: center;
   border-radius: 10px 10px 0px 0px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .signup__section__card__image {
     min-height: 500px;
   }
@@ -2340,7 +2355,7 @@ body main #myTable_paginate a:hover {
 .error__message__text {
   font-size: 20px;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .error__message__text {
     font-size: 30px;
   }
@@ -2349,7 +2364,7 @@ body main #myTable_paginate a:hover {
   color: #000;
   text-decoration: none;
 }
-@media screen and (min-width: 376px) and (max-width: 1023px) {
+@media screen and (min-width: 376px) and (max-width: 1223px) {
   .error__message__homelink a {
     font-size: 25px;
   }
