--- a/base/public/assets/scss/_style.scss
+++ b/base/public/assets/scss/_style.scss
@@ -1405,6 +1405,15 @@ body {
         background: #e0e0e0;
         opacity: 0.5;
       }
+      // .user__hr {
+      //   position: fixed;
+      //   top: 285px;
+      // }
+      .footer_hr {
+        width: 285px;
+        position: fixed;
+        bottom: 24px;
+      }
       // padding-top: 60px;
       // transition: left 5 ease;
       .user__profile {
@@ -1412,26 +1421,36 @@ body {
         align-items: center;
         flex-direction: column;
         @include responsive-desktop {
+          justify-content: center;
+
           top: 32px;
+          height: 280px;
         }
         img {
           width: 60px;
           height: 60px;
           border-radius: 50%;
 
-          margin-bottom: 10px;
+          margin-bottom: 20px;
         }
         h2 {
           text-align: center;
           margin-bottom: 20px;
           font-size: 20px;
           font-weight: $font-weight-title;
+          @include responsive-desktop {
+            // text-align: justify;
+            width: 80px;
+          }
         }
       }
       ul {
         // height: ;
         margin-left: auto;
         margin-right: auto;
+        @include responsive-desktop {
+          padding-top: 55px;
+        }
         li {
           margin: 17px 0;
           display: flex;
@@ -1569,7 +1588,7 @@ body {
         flex-shrink: 0;
         // padding-left: 337px;
       }
-      h2 {
+      h1 {
         font-size: 25px;
         font-weight: $font-weight-title-dashboard;
         padding-top: 7px;
@@ -1603,7 +1622,7 @@ body {
         z-index: 1;
         position: absolute;
         top: 0;
-        right: 140px;
+        left: 885px;
       }
       .svg {
         // flex-shrink: 1;
@@ -1731,6 +1750,184 @@ body {
         }
       }
     }
+
+    .container__dynamic {
+      width: 375px;
+      display: flex;
+      flex-direction: column;
+      // align-items: center;
+      @include responsive-desktop {
+        width: 1044px;
+      }
+      &__dashboard {
+        width: 340px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0px 0px 37px -21px #00000040;
+        margin-left: 35px;
+        margin-bottom: 30px;
+        @include responsive-desktop {
+          width: 1044px;
+          margin-left: 0px;
+        }
+        h4 {
+          font-family: $font-family-title;
+          font-size: $font-size-text;
+          font-weight: $font-weight-title-dashboard;
+          margin-left: 30px;
+          padding-top: 35px;
+        }
+        &__pop__up {
+          display: block;
+          position: fixed;
+          left: 0;
+          right: 0;
+          top: 20vh;
+          z-index: 99;
+          &__form {
+              display: flex;
+              flex-direction: column;
+              justify-content: space-around;
+              align-items: left;
+              margin: auto;
+              padding: 30px;
+              width: 400px;
+              min-height: 50px;
+              max-height: 500px;
+              gap: 20px;
+              background-color: rgb(255, 255, 255);
+              border: 3px solid rgba(255, 255, 255, 0.4);
+              border-radius: 10px;
+              color: #000;
+              box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.79);
+              -webkit-box-shadow: 0px 0px 40px 10px
+                  rgba(0, 0, 0, 0.79);
+              -moz-box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.79);
+
+              font-family: $font-family-title;
+              font-size: 15px;
+              font-weight: $font-weight-text-dashboard;
+              div {
+                  display: flex;
+                  height: 25px;
+                  gap: 5px;
+              }
+              input[type="submit"] {
+                  background-color: #9698d6;
+                  color: #fff;
+                  height: 36px;
+                  font-size: 16px;
+                  font-weight: 200;
+              }
+          }
+        }
+
+        &__modify {
+          width: 340px;
+          overflow-y: scroll;
+          @include responsive-desktop {
+            width: 1044px;
+            overflow-y: visible;
+          }
+          .label_search {
+            color: #ffffff00;
+            input {
+              height: 35px;
+              width: 200px;
+              align-self: flex-end;
+              color: #636363;
+              border: 1px solid #636363;
+              border-radius: 10px;
+              font-size: 15px;
+              font-weight: 300;
+              font-family: $font-family-title;
+              margin-bottom: 20px;
+              text-align: center;
+              @include responsive-desktop {
+                margin-bottom: 42px;
+                height: 53px;
+                width: 245px;
+                font-size: $font-size-text;
+              }
+            }
+          }
+          img {
+            height: 30px;
+            width: 30px;
+          }
+        }
+
+        &__invoices__new {
+          background-color: #ffffff;
+          border-radius: 10px;
+          margin-left: 35px;
+          box-shadow: 0px 0px 37px -21px #00000040;
+          @include responsive-desktop {
+            width: 1044px;
+            margin-left: 0px;
+          }
+          h4 {
+            font-family: $font-family-title;
+            font-size: $font-size-text;
+            font-weight: $font-weight-title-dashboard;
+            margin-left: 30px;
+            padding-top: 35px;
+            @include responsive-desktop {
+              width: 1044px;
+              padding-top: 53px;
+            }
+          }
+          hr {
+            border: 1px solid #e0e0e0;
+            margin-bottom: 20px;
+            @include responsive-desktop {
+              width: 981px;
+            }
+          }
+          form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            @include responsive-desktop {
+              width: 1044px;
+            }
+            input {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+              &:last-child {
+                background-color: #9698d6;
+                color: white;
+              }
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+            select {
+              margin-bottom: 20px;
+              width: 320px;
+              height: 36px;
+              background-color: #f5f5f5;
+              border-style: none;
+              font-size: $font-size-text;
+              font-weight: 100;
+              @include responsive-desktop {
+                width: 978px;
+                height: 60px;
+                margin-bottom: 45px;
+              }
+            }
+          }
+        }
+      }
+    }
+
   }
   #new__invoices {
     display: none;
@@ -1742,3 +1939,72 @@ body {
     display: none;
   }
 }
+
+
+.error {
+  min-height: 100vh;
+  width: 100%;
+  background-image: url("../img/error.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  @include responsive-tablet {
+  }
+  @include responsive-desktop {
+    background-size: 100% 100%;
+  }
+  &__message {
+    position: absolute;
+    z-index: 1;
+    min-height: 20vh;
+    width: 70%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 40vh 15%;
+    padding: 50px auto;
+    gap: 10px;
+    background-color: #ffffffcc;
+    border: 2px solid #000;
+    border-radius: 20px;
+    font-family: $font-family-text;
+    @include responsive-tablet {
+    }
+    @include responsive-desktop {
+      width: 40%;
+      margin: 40vh 30%;
+    }
+    &__text {
+      font-size: $font-size-text;
+      @include responsive-tablet {
+        font-size: 30px;
+      }
+      @include responsive-desktop {
+      }
+    }
+    &__homelink {
+      a {
+        color: #000;
+        text-decoration: none;
+        @include responsive-tablet {
+          font-size: 25px;
+        }
+        @include responsive-desktop {
+        }
+        &:hover {
+          color: #00000074;
+          text-decoration: underline;
+        }
+        &:active {
+          color: #000;
+          background-color: $yellow;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
